@@ -18,7 +18,7 @@
 (def jackson-version "2.9.4")
 (def jersey-version  "2.25.1")     ; Note: upgrading past 2.25.x breaks Jackson
 
-(defproject org.finos.symphony/bot-unfurl "1.0.5"
+(defproject org.finos.symphony/bot-unfurl "1.0.6"
   :description      "A bot that looks for URIs in messages and 'unfurls' them into a new message."
   :url              "https://github.com/symphonyoss/bot-unfurl"
   :license          {:spdx-license-identifier "Apache-2.0"
@@ -32,10 +32,10 @@
                     ]
   :dependencies     [
                       [org.clojure/clojure              "1.9.0"]
-                      [org.apache.commons/commons-lang3 "3.7"]
+                      [org.apache.commons/commons-lang3 "3.8.1"]
                       [aero                             "1.1.3"]
-                      [mount                            "0.1.12"]
-                      [org.clojure/tools.cli            "0.3.7"]
+                      [mount                            "0.1.13"]
+                      [org.clojure/tools.cli            "0.4.1"]
                       [org.clojure/tools.logging        "0.4.1"]
                       [ch.qos.logback/logback-classic   "1.2.3"]
                       [org.slf4j/jcl-over-slf4j         "1.7.25"]
@@ -43,11 +43,11 @@
                       [org.slf4j/jul-to-slf4j           "1.7.25"]
                       [org.jolokia/jolokia-jvm          "1.6.0"]
                       [org.jolokia/jolokia-jvm          "1.6.0" :classifier "agent"]
-                      [clj-time                         "0.14.4"]
+                      [clj-time                         "0.14.5"]
                       [com.linkedin.urls/url-detector   "0.1.17" :exclusions [org.apache.commons/commons-lang3 org.beanshell/bsh junit org.yaml/snakeyaml]]
-                      [org.clojars.pmonks/unfurl        "0.9.0"  :exclusions [org.clojure/clojure commons-logging]]
+                      [org.clojars.pmonks/unfurl        "0.10.0" :exclusions [org.clojure/clojure commons-logging]]
                       [org.clojars.pmonks/clj-2253      "0.1.0"  :exclusions [org.clojure/clojure]]
-                      [org.symphonyoss/clj-symphony     "0.8.0"  :exclusions [org.clojure/clojure
+                      [org.symphonyoss/clj-symphony     "0.10.0" :exclusions [org.clojure/clojure
                                                                               org.slf4j/slf4j-log4j12]]
 
                       ; The following dependencies are inherited but have conflicting versions, so we "pin" the versions here
@@ -67,15 +67,9 @@
                       [joda-time/joda-time                                          "2.10"]
                       [org.hamcrest/hamcrest-core                                   "1.3"]
                     ]
-  :profiles         {:dev {:dependencies [[midje         "1.9.1"]]
+  :profiles         {:dev {:dependencies [[midje         "1.9.3"]]
                            :plugins      [[lein-midje    "3.2.1"]
                                           [lein-licenses "0.2.2"]]}
                      :uberjar {:aot          :all
                                :uberjar-name "bot-unfurl-standalone.jar"}}
-  :jvm-opts         ~(let [version     (System/getProperty "java.version")
-                           [major _ _] (clojure.string/split version #"\.")]
-                       (if (>= (java.lang.Integer/parseInt major) 9)
-                         ["--add-modules" "java.xml.bind"]
-                         []))
-  :main             bot-unfurl.main
-  )
+  :main             bot-unfurl.main)
